// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsPointsTable Component should render correctly 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs20"
      fontWeight="black"
      margin={null}
      numberOfLines={null}
      text="$0"
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        numberOfLines={null}
        text="My Rewards"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs20"
      fontWeight="black"
      margin={null}
      numberOfLines={null}
      text={10}
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        numberOfLines={null}
        text="Current Points"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs20"
      fontWeight="black"
      margin={null}
      numberOfLines={null}
      text={90}
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        numberOfLines={null}
        text="Points to Next Reward"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;

exports[`RewardsPointsTable Component should render correctly with values 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs20"
      fontWeight="black"
      margin={null}
      numberOfLines={null}
      text="lbl_rewardPoints_currency0"
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        numberOfLines={null}
        text="lbl_rewardPoints_heading"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs20"
      fontWeight="black"
      margin={null}
      numberOfLines={null}
      text={10}
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        numberOfLines={null}
        text="Current Points"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs20"
      fontWeight="black"
      margin={null}
      numberOfLines={null}
      text={90}
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        fontWeight="regular"
        margin={null}
        numberOfLines={null}
        text="Points to Next Reward"
        textAlign="center"
        textDecoration={null}
      />
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;
